src/main/java/oo/solid/isp/sample/good/telephony/Telephony.java
package oo.solid.isp.sample.good.telephony;

public interface Telephony {
    void ring();
    void redial();
}
