src/main/java/oo/solid/isp/sample/bad/Phone.java
package oo.solid.isp.sample.bad;

public interface Phone {
    void ring();
    void dial(String number);
    void redial();
    void takePicture();
}
